added copyright infos

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -13,7 +13,7 @@
 %\usepackage{times} % Times New Roman oder ähnliche Schriftart
 %\setkomafont{sectioning}{\normalcolor\bfseries} %auch für Überschriften
 \usepackage[utf8x]{inputenc}
-
+\usepackage{wrapfig} %Textumlauf um Bilder
 %\usepackage[T1]{fontenc}
 %\usepackage{url}
 %\usepackage{hyperref}
@@ -186,5 +186,6 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 	\item Ausnahme, keinen Maschinenschraubstock benutzen zu müssen, nur, wenn sichergestellt ist, dass nichts passiert. Soweit möglich alle kritische Sachen mit dem Akkuschrauber machen
 \end{itemize}
 
+\ccLicense{werkstatt-einweisung}{Einweisung Werkstatt}
 
 \end{document}
