Wie im Treffen besprochen: Lange Jobs müssen ggf. unterbrochen werden

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -79,6 +79,7 @@
   	% Melde-Formular ... ? Blabla aus Checkliste
   \end{itemize} 
   \item Den Anweisungen der Betreuer ist Folge zu leisten
+  \item Wenn bestimmte Maschinen/Werkzeuge lange Zeit blockiert werden, müssen wartende Besucher mit kürzeren Projekten dazwischen gelassen werden
 \end{itemize}
 \vbox{\vspace{0,5cm}}
 
