TYPO: Betruer -> Betreuer

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -160,7 +160,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 \textit{Grund: Werden Kleidungsstücke von der Maschine erfasst, zieht die Maschine Körperteile zu sich hin, was äußerst unangenehme Folgen hat.}
 
 \begin{itemize}
-	\item Bei Ungewissheit Betruer fragen
+	\item Bei Ungewissheit Betreuer fragen
 \end{itemize}
 
 \vbox{\vspace{0,5cm}}
