Dokument aktualisiert (Orte der PSA)
* Orte der PSA ergänzt
* kleinere typographische Anpassungen
* auf aktuelle VErsion von fablab-document aktualisiert

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -72,7 +72,7 @@
   \item Bei Unfällen
   \begin{itemize}
   	\item Betreuer benachrichtigen (Keine Angst, wir sind euch nicht böse, wenn etwas passiert!)
-  	\item Unfall in das Verbandbuch (im Verbandskasten, befindet sich z.B. im Durchgang zur E-Werkstatt) eintragen, weitere Infos stehen dort
+  	\item Unfall in das Verbandbuch (im Verbandskasten, befindet sich z.\,B. im Durchgang zur E-Werkstatt) eintragen, weitere Infos stehen dort
   	% TODO im Verbandsbuch folgende Infos anbringen:
   	% Sobald auch nur ein Pflaster benötigt wurde, Unfall in das Verbandbuch eintragen.
   	% Wenn ärztliche Versorgung notwendig ist: Unfall möglichst schnell der Uni melden. Nur so besteht die Möglichkeit, dass die Versicherung der Uni für Schäden aufkommt.
@@ -109,7 +109,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 
 \section{Metallbearbeitung}
 \begin{itemize}
-	\item Die meisten Werkzeuge sind für Edelstahl bzw.\  gehärteten Stahl (z.B. polierte Wellen) nicht geeignet
+	\item Die meisten Werkzeuge sind für Edelstahl bzw.\  gehärteten Stahl (z.\,B. polierte Wellen) nicht geeignet
 	\item Nach getaner Arbeit:
 	\begin{itemize}
 		\item Bohrspäne wegkehren oder saugen
@@ -119,7 +119,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 \end{itemize}
 
 
-\vbox{\vspace{0,5cm}}
+%\vbox{\vspace{0,3cm}}
 
 \subsection{Bohrmaschine, rotierende Werkzeuge}
 
@@ -155,7 +155,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 	% "Haarnetz oder festsitzende Kopfbedeckung" gemäß BGI 578, S. 32
 	\item Abstand halten von allem, das sich (schnell) dreht!
 	% können auch vom Bohrer erfasst werden (GUV-SI 8041 Holz an Schulen)
-	\item \textbf{Weder Handschuhe, lose Kleidung} (z.B. Kittel, Schürzen, Schals, Krawatten, Halstücher, \dots) noch \textbf{Schmuck} (Ringe, Arm\-bänder, Uhren, Ketten u.ä.) tragen.
+	\item \textbf{Weder Handschuhe, lose Kleidung} (z.\,B. Kittel, Schürzen, Schals, Krawatten, Halstücher, \dots) noch \textbf{Schmuck} (Ringe, Arm\-bänder, Uhren, Ketten u.\,ä.) tragen.
 \end{itemize}
 \textit{Grund: Werden Kleidungsstücke von der Maschine erfasst, zieht die Maschine Körperteile zu sich hin, was äußerst unangenehme Folgen hat.}
 
@@ -163,7 +163,21 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 	\item Bei Ungewissheit Betreuer fragen
 \end{itemize}
 
-\vbox{\vspace{0,5cm}}
+
+%\vbox{\vspace{0,3cm}}
+
+\section{Lagerorte der persönlichen Schutzausrüstung (PSA)}
+\begin{itemize}
+	\item Es lagert PSA für Arbeiten im Lab (Schutzbrillen, Gehörschutz), diese ist bei Bedarf zu tragen.
+	\item Kapselgehörschutz hängt an der Fräse aus.
+	\item Schutzbrillen stehen in den markierten Behältnissen an der Werkbank und am Ätztisch zur Verfügung.
+	\item Benachrichtige einen Betreuer, wenn nicht ausreichend Schutzausrüstung zur Verfügung steht.
+	\item Räume verwendete Artikel nach Gebrauch wieder auf.
+	
+\end{itemize}
+
+
+%\vbox{\vspace{0,3cm}}
 
 \section{Bezahlen und Verwenden von Material aus dem FabLab}
 \begin{itemize}
@@ -178,7 +192,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 \section{Weitere Hinweise für Betreuer}
 \subsection{Verwendungsverbote}
 \begin{itemize}
-	\item Asbest (Hitzedämmung in Elektrogeräten vor 1993, z.B. Toaster und Haartrockner)
+	\item Asbest (Hitzedämmung in Elektrogeräten vor 1993, z.\,B. Toaster und Haartrockner)
 	\item Bildröhren
 \end{itemize}
 
