überflüssiges bei bezahlung entfernt

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -182,8 +182,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 \section{Bezahlen und Verwenden von Material aus dem FabLab}
 \begin{itemize}
 	\item Preise können dem Kassenterminal oder den Aufklebern der Produkte entnommen werden
-	\item Die Bezahlung erfolg über das Kassenterminal (auf Vertrauensbasis). Bei Problemen wende dich an einen Betreuer
-	\item Getränke nicht in die blaue Kasse zahlen, die rote verwenden
+	\item Die Bezahlung erfolg über das Kassenterminal. Bei Problemen wende dich an einen Betreuer
 	
 \end{itemize}
 
