Token nicht weitergeben in die Einweisung aufgenommen

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -195,6 +195,9 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 	\item Bildröhren
 \end{itemize}
 
+\subsection{Zugang und Token}
+Schließberechtigungen mit FAUCard oder Token werden auf \textbf{eine} Person ausgestellt und dürfen nicht an andere Personen weitergegeben werden.
+
 \subsection{Standbohrmaschine}
 \begin{itemize}
 	\item Ausnahme, keinen Maschinenschraubstock benutzen zu müssen, nur, wenn sichergestellt ist, dass nichts passiert. Soweit möglich alle kritische Sachen mit dem Akkuschrauber machen
