Dies und das ergänzt

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -169,11 +169,11 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 \section{Lagerorte der persönlichen Schutzausrüstung (PSA)}
 \begin{itemize}
 	\item Es lagert PSA für Arbeiten im Lab (Schutzbrillen, Gehörschutz), diese ist bei Bedarf zu tragen.
-	\item Kapselgehörschutz hängt an der Fräse aus.
 	\item Schutzbrillen stehen in den markierten Behältnissen an der Werkbank und am Ätztisch zur Verfügung.
+	\item Kapselgehörschutz hängt an der Fräse aus.
+	\item Staub (Holz, Platinen) vermeiden: Entstandenen Staub wegsaugen anstatt zu kehren. Elektrowerkzeuge (Stichsäge, Schleifer) immer mit Staubsauger verwenden. Der Festool-Staubsauger (weiß-grün) ist für Feinstaub zugelassen.
 	\item Benachrichtige einen Betreuer, wenn nicht ausreichend Schutzausrüstung zur Verfügung steht.
 	\item Räume verwendete Artikel nach Gebrauch wieder auf.
-	
 \end{itemize}
 
 
@@ -182,21 +182,32 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 \section{Bezahlen und Verwenden von Material aus dem FabLab}
 \begin{itemize}
 	\item Preise können dem Kassenterminal oder den Aufklebern der Produkte entnommen werden
-	\item Die Bezahlung erfolg über das Kassenterminal. Bei Problemen wende dich an einen Betreuer
+	\item Die Bezahlung erfolgt über das Kassenterminal. Bei Problemen wende dich an einen Betreuer
 	
 \end{itemize}
 
+\section{FabLab-Kamera}
+Fotos mit der FabLab-Kamera werden automatisch online veröffentlicht. Beachte vor Benutzung das Hinweisblatt in der Kamera-Kiste.
 
 \newpage
-\section{Weitere Hinweise für Betreuer}
+\section{Weitere Hinweise für Betreuer und Schließberechtigte}
+\subsection{Zugang und Token}
+Schließberechtigungen (mit FAUCard oder Token) werden auf \textbf{eine} Person ausgestellt und dürfen nicht an andere Personen weitergegeben werden.
+
+\subsection{Verlassen des Labs}
+Wenn Leute ohne Schließberechtigung anwesend sind, muss man beim Verlassen die Verantwortung an einen anderen anwesenden Schließberechtigten weitergeben, oder alle Leute aus dem Lab rausschicken.
+
+Beim Verlassen die Checkliste an der Türe abarbeiten (Geräte aus, Besprechungsraum Türe zu, ...).
+
 \subsection{Verwendungsverbote}
 \begin{itemize}
 	\item Asbest (Hitzedämmung in Elektrogeräten vor 1993, z.\,B. Toaster und Haartrockner)
 	\item Bildröhren
+	\item Selbergebaute Dinge an Netzspannung ohne vorherige Elektroprüfung (Tip: Stattdessen ein käufliches Netzteil verwenden.)
 \end{itemize}
 
-\subsection{Zugang und Token}
-Schließberechtigungen mit FAUCard oder Token werden auf \textbf{eine} Person ausgestellt und dürfen nicht an andere Personen weitergegeben werden.
+\subsection{Fehlermeldungen}
+Bei Defekten oder ungewöhnlichem Verhalten: Fehlermeldung an Gerät/Werkzeug anbringen (Vordruck \enquote{Funktion beeinträchtigt} oder \enquote{Außer Betrieb}), verständlich ausfüllen, und Mail an die Mailingliste schicken.
 
 \subsection{Standbohrmaschine}
 \begin{itemize}
