--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -104,6 +104,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
  \item Nach Benutzung: Schalter am Tisch ausschalten
  %\item Lötspitze nach dem Putzen gleich wieder verzinnen (sonst Verschleiß durch Oxidation)
  %\item Kein bleifreies Lot mit unseren Lötkolben verwenden: Korrosion der Lötspitze.
+ \item Das Werkzeug in den obersten Schubladen der E-Werkstatt-Arbeitsplätze jeweils wieder dorthin zurückräumen (Farbkodierung von Werkzeug zu Schublade)
 \end{itemize}
 
 
