Unbeschriftete Dinge werden entsorgt

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -67,7 +67,8 @@
   \item Für selbstständiges Arbeiten in den FabLab-Räumen sind meist Einweisungen erforderlich
   \item Maschinen und Werkzeuge pfleglich behandeln! Alles Defekte gleich beim Betreuer abgeben
   % "Alles Defekte aussortieren" wird benötigt! (siehe Gefährdungsbeurteilung Mechanikwerkstatt)
-  \item \textbf{Ordnung halten!} Dreck und Reste wegwerfen
+  \item \textbf{Ordnung halten!} Dreck und Reste wegwerfen.
+  \item Nur Betreuer dürfen Sachen im FabLab lagern. Herumliegende unbeschriftete Sachen werden entsorgt oder als Spende verwertet. 
   \item \textbf{Sorgfältig arbeiten}, bei Unklarheiten nachfragen
   \item Bei Unfällen
   \begin{itemize}
