Add Sichtprüfung vor Verwendung von Werkzeug/Gerät

--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -65,21 +65,16 @@
 \section{Verhaltensregeln}
 \begin{itemize}
   \item Für selbstständiges Arbeiten in den FabLab-Räumen sind meist Einweisungen erforderlich
-  \item Maschinen und Werkzeuge pfleglich behandeln! Alles Defekte gleich beim Betreuer abgeben
-  % "Alles Defekte aussortieren" wird benötigt! (siehe Gefährdungsbeurteilung Mechanikwerkstatt)
+  \item Maschinen und Werkzeuge pfleglich behandeln! Sichtprüfung vor Verwendung von Werkzeug und Geräten! Alles Defekte gleich beim Betreuer abgeben. Defektes wird fachkundig repariert oder weggeworfen.
   \item \textbf{Ordnung halten!} Dreck und Reste wegwerfen.
   \item Nur Betreuer dürfen Sachen im FabLab lagern. Herumliegende unbeschriftete Sachen werden entsorgt oder als Spende verwertet. 
   \item \textbf{Sorgfältig arbeiten}, bei Unklarheiten nachfragen
   \item Bei Unfällen
   \begin{itemize}
   	\item Betreuer benachrichtigen (Keine Angst, wir sind euch nicht böse, wenn etwas passiert!)
-  	\item Unfall in das Verbandbuch (im Verbandskasten, befindet sich z.\,B. im Durchgang zur E-Werkstatt) eintragen, weitere Infos stehen dort
-  	% TODO im Verbandsbuch folgende Infos anbringen:
-  	% Sobald auch nur ein Pflaster benötigt wurde, Unfall in das Verbandbuch eintragen.
-  	% Wenn ärztliche Versorgung notwendig ist: Unfall möglichst schnell der Uni melden. Nur so besteht die Möglichkeit, dass die Versicherung der Uni für Schäden aufkommt.
-  	% Melde-Formular ... ? Blabla aus Checkliste
+  	\item Unfall in das Verbandbuch (im Verbandskasten, befindet sich z.\,B. im Durchgang zur E-Werkstatt) eintragen, weitere Infos stehen dort und sind zu beachten.
   \end{itemize} 
-  \item Den Anweisungen der Betreuer ist Folge zu leisten
+  \item Den Anweisungen der Betreuer ist Folge zu leisten.
   \item Wenn bestimmte Maschinen/Werkzeuge lange Zeit blockiert werden, müssen wartende Besucher mit kürzeren Projekten dazwischen gelassen werden
 \end{itemize}
 \vbox{\vspace{0,5cm}}
@@ -101,7 +96,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
   % Nachsatz ist notwendig, ist entsprechend im Sicherheitskonzept erwähnt.
 
   % GUV-SI 8038: ... bei Lötarbeiten Essen, Trinken, Rauchen und Schminken untersagt ist. Nach der Arbeit ist gründliches Händewaschen erforderlich.
- \item Beim Löten nicht essen, trinken oder schminken. Danach Hände waschen. (Flussmittel)
+ \item Beim Löten nicht essen, trinken, schminken oder Ähnliches. Danach Hände waschen. (Flussmittel)
  \item Nach Benutzung: Schalter am Tisch ausschalten
  %\item Lötspitze nach dem Putzen gleich wieder verzinnen (sonst Verschleiß durch Oxidation)
  %\item Kein bleifreies Lot mit unseren Lötkolben verwenden: Korrosion der Lötspitze.
