--- a/Einweisung_Werkstatt.tex
+++ b/Einweisung_Werkstatt.tex
@@ -113,6 +113,7 @@ Aufschrift der Ampelsymbole an den Geräten befolgen!
 		\item Werkzeuge ausspannen und aufräumen
 		\item auch Proxxon-Werkzeuge zurück legen
 	\end{itemize}
+	\item Aus Gründen von fehlender Arbeitsschutzeinrichtungen, Brandschutz und Verschmutzung im Lab sind Arbeiten wie Schweissen, Trennschneiden und Trennschleifen (Flexen) im Lab (und natürlich auch im gesamten Gebäude) nicht möglich und deshalb untersagt.
 \end{itemize}
 
 
